Fix button position on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -440,7 +440,7 @@ css in bootstrap*/
 
 .items .openButton {
   float: left;
-  left: -200px;
+  left: -300px;
 }
 
 .items .projectLink {
